--- a/index.html
+++ b/index.html
@@ -1,157 +1,144 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>‏۵S Inventory – ثبت موجودی</title>
-  <!-- این مانیفست برای تبدیل سایت به اپلیکیشن PWA استفاده می‌شود. -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>۵S Inventory – ثبت موجودی</title>
+  <!-- PWA -->
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <meta name="theme-color" content="#2a7a2e" />
   <style>
-    /* حداقل استایل برای صفحهٔ شمارش موجودی به سبک کارت */
+    * { box-sizing: border-box; }
     body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #f5f5f5;
-      direction: rtl;
-      text-align: center;
+      margin: 0; background: #f5f5f5; direction: rtl;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      color: #222; text-align: center;
     }
-    header {
-      background: #2a7ae2;
-      color: white;
-      padding: 1rem;
-      font-size: 1.6rem;
-    }
+    header { background:#2a7a2e; color:#fff; padding:14px 16px; font-weight:600; }
+    #progress { max-width: 520px; width: 90%; margin: 10px auto 0; height: 6px; background:#e0e0e0; border-radius: 999px; overflow: hidden; }
+    #progressBar { width: 0; height: 100%; background:#2a7a2e; }
+
     #card {
-      background: white;
-      margin: 1rem auto;
-      padding: 1rem;
-      width: 90%;
-      max-width: 500px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 520px; width: 90%; margin: 14px auto; background:#fff;
+      border-radius: 10px; box-shadow: 0 8px 24px rgba(0,0,0,.08); overflow: hidden;
     }
-    #card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 4px;
-      background: #ddd;
-    }
-    #details {
-      text-align: right;
-      margin-top: 1rem;
-      font-size: 0.95rem;
-      line-height: 1.5;
-    }
-    #qtyInput {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.5rem;
-      font-size: 1rem;
-    }
-    #saveBtn {
-      width: 100%;
-      padding: 0.6rem;
-      margin-top: 0.8rem;
-      background: #2a7ae2;
-      color: white;
-      border: none;
-      font-size: 1.1rem;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #progress {
-      width: 90%;
-      max-width: 500px;
-      margin: 1rem auto;
-      height: 6px;
-      background: #e0e0e0;
-      border-radius: 3px;
-      overflow: hidden;
-    }
-    #progressBar {
-      height: 100%;
-      background: #2a7ae2;
-      width: 0;
+    #card img { width: 100%; height: 220px; object-fit: cover; background:#ddd; }
+    #details { text-align: right; padding: 10px 14px; line-height: 1.6; }
+    #details strong { font-weight: 700; }
+    #qtyInput { width: 100%; padding: .7rem; margin: .6rem 0; border: 1px solid #d0d0d0; border-radius: 8px; text-align: center; font-size: 1.05rem; }
+    #saveBtn { width: 100%; background:#2a7a2e; color:#fff; border:none; border-radius: 8px; padding: .9rem; font-size:1.05rem; cursor:pointer; }
+    #saveBtn:disabled { opacity:.6; cursor:not-allowed; }
+    footer { color:#666; font-size:.88rem; margin: 10px 0 24px; }
+    #toast {
+      position: fixed; left: 50%; transform: translateX(-50%); bottom: 16px;
+      background:#2a7a2e; color:#fff; padding:10px 14px; border-radius:999px; display:none;
     }
   </style>
 </head>
 <body>
-  <header>‏۵S Inventory</header>
-  <div id="progress">
-    <div id="progressBar"></div>
-  </div>
+  <header>۵S Inventory</header>
+  <div id="progress"><div id="progressBar"></div></div>
+
   <div id="card">
-    <!-- تصویر محصول -->
-    <img id="productImage" src="icon-512.png" alt="تصویر محصول">
+    <img id="productImage" src="./icon-512.png" alt="تصویر محصول" />
     <div id="details"></div>
-    <input type="number" id="qtyInput" placeholder="موجودی را وارد کنید" step="any">
-    <button id="saveBtn">ذخیره و بعدی</button>
+    <div style="padding: 0 14px 14px;">
+      <input id="qtyInput" inputmode="numeric" placeholder="موجودی را وارد کنید" />
+      <button id="saveBtn">ذخیره و بعدی</button>
+    </div>
   </div>
+
+  <footer id="footer"></footer>
+  <div id="toast">ثبت شد</div>
+
   <script>
-    // بارگذاری داده‌ها از data.json
+    // Simple toast
+    function toast(msg) {
+      const t = document.getElementById('toast');
+      t.textContent = msg || 'ثبت شد';
+      t.style.display = 'block';
+      clearTimeout(t.__timer); t.__timer = setTimeout(()=>t.style.display='none', 1200);
+    }
+
+    // Local storage helpers
+    function loadQuantities() {
+      try { return JSON.parse(localStorage.getItem('inventoryQuantities')) || {}; }
+      catch { return {}; }
+    }
+    function saveQuantities(q) {
+      localStorage.setItem('inventoryQuantities', JSON.stringify(q));
+    }
+
+    // State
     let items = [];
     let currentIndex = 0;
-    // تلاش برای بارگذاری مقادیر ثبت شده در localStorage
-    function loadQuantities() {
-      const stored = localStorage.getItem('inventoryQuantities');
-      return stored ? JSON.parse(stored) : {};
-    }
-    function saveQuantities(data) {
-      localStorage.setItem('inventoryQuantities', JSON.stringify(data));
-    }
-    const quantities = loadQuantities();
+    let quantities = loadQuantities();
 
     function updateProgress() {
-      const progressBar = document.getElementById('progressBar');
-      const percent = items.length ? ((currentIndex) / items.length) * 100 : 0;
-      progressBar.style.width = percent + '%';
+      const p = (currentIndex / items.length) * 100;
+      document.getElementById('progressBar').style.width = p + '%';
+      document.getElementById('footer').textContent =
+        items.length ? `آیتم ${currentIndex+1} از ${items.length}` : '';
     }
-    function showItem(index) {
-      if (index >= items.length) {
-        document.getElementById('card').innerHTML = '<h3>تمام موارد ثبت شد!</h3><p>از همکاری شما سپاس‌گزاریم.</p>';
-        updateProgress();
+
+    function showItem(i) {
+      const elDetails = document.getElementById('details');
+      const img = document.getElementById('productImage');
+      if (!items.length) {
+        elDetails.innerHTML = '<p style="margin:1rem">آیتمی نیافت نشد.</p>';
+        img.src = './icon-512.png';
+        document.getElementById('saveBtn').disabled = true;
         return;
       }
-      const item = items[index];
-      // استفاده از تصویر اگر موجود است، در غیر این صورت آیکون پیش‌فرض
-      document.getElementById('productImage').src = item.image || 'icon-512.png';
-      const detailsEl = document.getElementById('details');
-      detailsEl.innerHTML =
-        '<strong>نام: </strong>' + item.name + '<br>' +
-        (item.brand ? '<strong>برند: </strong>' + item.brand + '<br>' : '') +
-        '<strong>دسته: </strong>' + (item.category || '') + '<br>' +
-        '<strong>واحد: </strong>' + (item.unit || '') + '<br>' +
-        '<strong>کمینه/بیشینه: </strong>' + (item.par || 0) + ' / ' + (item.reorderTo || 0) + '<br>' +
-        (item.unitCost ? '<strong>قیمت واحد: </strong>' + item.unitCost + '<br>' : '') +
-        (item.supplier ? '<strong>تأمین‌کننده: </strong>' + item.supplier + '<br>' : '') +
-        (item.notes ? '<strong>توضیحات: </strong>' + item.notes + '<br>' : '');
-      const qtyInput = document.getElementById('qtyInput');
-      qtyInput.value = quantities[item.id] !== undefined ? quantities[item.id] : '';
+      const item = items[i];
+      img.src = item.image ? item.image : './icon-512.png';
+      img.onerror = () => { img.src = './icon-512.png'; };
+
+      elDetails.innerHTML =
+        `<strong>نام:</strong> ${item.name || '-'}<br>` +
+        `<strong>دسته:</strong> ${item.category || '-'}<br>` +
+        `<strong>واحد:</strong> ${item.unit || '-'}<br>` +
+        `<strong>کمینه/ بهینه:</strong> ${(item.par ?? 0)} / ${(item.reorderTo ?? 0)}<br>` +
+        (item.brand ? `<strong>برند:</strong> ${item.brand}<br>` : '') +
+        (item.supplier ? `<strong>تامین‌کننده:</strong> ${item.supplier}<br>` : '') +
+        (item.notes ? `<strong>یادداشت:</strong> ${item.notes}<br>` : '');
+
+      const qInput = document.getElementById('qtyInput');
+      qInput.value = (quantities[item.id] ?? '');
       updateProgress();
     }
-    document.getElementById('saveBtn').addEventListener('click', function() {
-      if (currentIndex >= items.length) return;
+
+    // Save & next
+    document.getElementById('saveBtn').addEventListener('click', () => {
+      if (!items.length) return;
       const item = items[currentIndex];
-      const qtyVal = parseFloat(document.getElementById('qtyInput').value) || 0;
-      quantities[item.id] = qtyVal;
+      const v = Number(document.getElementById('qtyInput').value || 0);
+      quantities[item.id] = isFinite(v) ? v : 0;
       saveQuantities(quantities);
-      currentIndex++;
+      toast('ثبت شد');
+
+      currentIndex = (currentIndex + 1);
+      if (currentIndex >= items.length) currentIndex = 0;
       showItem(currentIndex);
     });
-    // بارگذاری فایل JSON
-    fetch('data.json')
-      .then(resp => resp.json())
+
+    // Load data
+    fetch(new URL('./data.json', location.href))
+      .then(r => { if (!r.ok) throw new Error('HTTP ' + r.status); return r.json(); })
       .then(data => {
-        items = data;
+        items = Array.isArray(data) ? data : [];
+        currentIndex = 0;
         showItem(currentIndex);
       })
       .catch(err => {
-        document.getElementById('card').innerHTML = '<p>خطا در بارگذاری داده‌ها</p>';
+        document.getElementById('details').innerHTML =
+          `<p style="padding:1rem">خطا در بارگذاری داده‌ها: ${err.message}</p>`;
+        document.getElementById('saveBtn').disabled = true;
       });
-    // ثبت سرویس ورکر برای PWA
+
+    // Register SW with *limited scope* to avoid hijacking other pages
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js');
+      navigator.serviceWorker.register('./sw.js', { scope: './' }).catch(()=>{});
     }
   </script>
 </body>
